fix(core): fix dimensions of links in footer
Set the display property of the links in the site footer to
inline-block.

The links are visualised by icons which contain images or <span> tags
for Material Symbols.
If a link does not cover the same area as its content, users may end up
hovering/clicking/... in the wrong place. When tabbing, the border on
the focused element may look off.
The inline-block makes the links fit the icons' dimensions, which
prevents links that are smaller in size than their visual content.

--- a/apis_core/core/static/css/core.css
+++ b/apis_core/core/static/css/core.css
@@ -7,6 +7,11 @@ a #logo:hover {
     opacity: 0.5;
 }
 
+footer a:has(> img),
+footer a:has(> span[class*="material-symbols"]) {
+    display: inline-block;
+}
+
 footer a:has(> img):hover,
 footer a:has(> span[class*="material-symbols"]):hover {
     text-decoration: none;
